--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -10,7 +10,7 @@
   <ion-content class="padding">
     <ion-scroll delegate-handle="mainScroll" overflow-scroll="true" direction="y" height="100%" class="debug-scroll">
       <div class="chatbox-container">
-        <p ng-bind="msg.content" ng-repeat="msg in messages" ng-class="msg.name == 'allan' ? 'to' : 'from'" class="message"></p>
+        <p ng-bind="msg.content" ng-repeat="msg in messages" ng-class="msg.id == monId ? 'to' : 'from'" class="message"></p>
       </div>
       </div>
     </ion-scroll>
