--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view title="Inscription">
-    <ion-content>
+    <ion-content class="login">
         <div class="padding">
-            <button ng-click="login()" class="button button-block button-balanced">Oauth Sign In</button>
+            <button ng-click="login()" class="button button-block button-positive">Oauth Sign In</button>
         </div>
     </ion-content>
 </ion-view>
