--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,6 +8,7 @@
 }
 .vertical-center-parent{
 	width:100%;height:100%;
+	font-size:0;
 }
 .vertical-center-parent::before{
 	content:'';
@@ -16,7 +17,7 @@
 	vertical-align:middle;
 }
 .vertical-center{
-	width:98.789%;
+	width:100%;
 	display:inline-block;
 	vertical-align:middle;
 }
