--- a/platforms/ios/www/templates/tab-soiree.html
+++ b/platforms/ios/www/templates/tab-soiree.html
@@ -1,7 +1,9 @@
 <ion-view view-title="Dashboard" ng-init="init()">
   <ion-content class="padding">
-    <div class="list card" ng-repeat="soiree in soirees">
-      <div class="item item-body">
+    <!-- <div class="list card" ng-repeat="soiree in soirees">
+      <div class="item item-body"> -->
+    <ion-list>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="soiree in soirees" type="item-text-wrap" href="#/tab/chats/{{soiree.id}}">
         <div>
           <h2>Boite : {{soiree.boite}}</h2>
           <span>ID de la soirée : {{soiree.id}}</span><br/>
@@ -11,7 +13,9 @@
           <span ng-if="soiree.statut == -1">Refusé</span>
           <span ng-if="soiree.statut == 1">Accepté</span>
         </div>
-      </div>
-    </div>
+      </ion-item>
+    </ion-list>
+      <!-- </div>
+    </div> -->
   </ion-content>
 </ion-view>
