--- a/www/templates/tab-soiree.html
+++ b/www/templates/tab-soiree.html
@@ -1,17 +1,19 @@
 <ion-view view-title="Dashboard" ng-init="init()">
   <ion-content class="padding">
-    <div class="list card" ng-repeat="soiree in soirees">
-      <div class="item item-body">
-        <div>
-          <h2>Boite : {{soiree.boite}}</h2>
-          <span>ID de la soirée : {{soiree.id}}</span><br/>
-          <span>Date : {{soiree.date}}</span><br/>
-          <span>Url de la photo : {{soiree.photo}}</span><br/>
-          <span ng-if="soiree.statut == 0">En attente</span>
-          <span ng-if="soiree.statut == -1">Refusé</span>
-          <span ng-if="soiree.statut == 1">Accepté</span>
-        </div>
-      </div>
-    </div>
+    <!-- <div class="list card" ng-repeat="soiree in soirees">
+      <div class="item item-body"> -->
+    <ion-list>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="soiree in soirees" type="item-text-wrap" href="#/tab/soirees/{{soiree.id}}">
+        <img ng-src="{{soiree.photo}}">
+        <h2>Boite : {{soiree.boite}}</h2>
+        <p>ID de la soirée : {{soiree.id}}</p>
+        <span>Date : {{soiree.date}}</span><br/>
+        <span ng-if="soiree.statut == 0">En attente</span>
+        <span ng-if="soiree.statut == -1">Refusé</span>
+        <span ng-if="soiree.statut == 1">Accepté</span>
+      </ion-item>
+    </ion-list>
+      <!-- </div>
+    </div> -->
   </ion-content>
 </ion-view>
