Add create soiree view

--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -48,3 +48,13 @@ h1 span{
 	color:#FFF;
 }
 /***************************************/
+
+/***DetailSoiree***/
+
+.add_girl{
+	background-color:#8fcdff;
+	width: 80% !important;
+	display: block;
+	margin: 0 auto;
+	border: none;
+}
