--- a/platforms/ios/www/templates/create.html
+++ b/platforms/ios/www/templates/create.html
@@ -1,5 +1,39 @@
 <ion-view title="Creation">
     <ion-content>
-
+		<div class="list">
+		  <label class="item item-input item-select">
+		    <select>
+		      	<option ng-repeat="boite in boites">{{boite.nom}}</option>
+		    </select>
+		  </label>
+		  <label class="item item-input">
+		    <input type="text" placeholder="Date">
+		  </label>
+		  <label class="item item-input">
+		    <input type="text" placeholder="Heure">
+		  </label>
+		  <label class="item item-input">
+		    <span class="input-label">invités</span>
+		    <button class="button button-block button-positive activated ion-social-facebook" ng-click="chooseFriends()"></button>
+		  </label>
+		  <button class="button button-block button-positive activated">Submit</button>
+		</div>
     </ion-content>
 </ion-view>
+<div class="{{inviteFriends}} contain-fb-friends">
+	<label class="item-input-wrapper">
+	    <i class="icon ion-ios-search placeholder-icon"></i>
+	    <input type="search" placeholder="Search">
+	</label>
+	<ion-scroll zooming="true" direction="xy" style="" class="scroll-view">
+	  	<ul>
+			<li class="item item-checkbox" ng-repeat="friendData in friendsData">
+				 <label class="checkbox">
+				   <input type="checkbox">
+				 </label>
+				 {{friendData.name}}
+			</li>
+		</ul>
+	</ion-scroll>
+	<button class="validate-friends-fb" ng-click="validateFriends()">Valider les invités</button>
+</div>
