--- a/platforms/android/assets/www/templates/tabs.html
+++ b/platforms/android/assets/www/templates/tabs.html
@@ -3,15 +3,15 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-background-dark">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Mes soirées" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/soiree">
+  <ion-tab title="Mes soirées" icon-off="ion-ios-wineglass-outline" icon-on="ion-ios-wineglass" href="#/tab/soiree">
     <ion-nav-view name="tab-soiree"></ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
+  <ion-tab title="Chats" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
