--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,5 @@
+
+
 /* Empty. Add your own CSS if you like */
 /***************************************/
 /*               LOGIN                 */
@@ -48,6 +50,30 @@ h1 span{
 	color:#FFF;
 }
 /***************************************/
+
+/***Soiree***/
+.title_top_soiree {
+	font-size: 14px !important;
+	color:#a3a3a3;
+}
+
+.infos_soiree{
+	color: #8fcdff;
+	text-transform: uppercase;
+	font-size: 10px;
+}
+
+.infos_soiree .accept_soiree{
+	color: #4ed765;
+}
+
+.infos_soiree.stay_soiree{
+	color: gray;
+}
+
+.infos_soiree.refuse_soiree{
+	color: #f04533;
+}
 
 /***DetailSoiree***/
 
