--- a/www/templates/tab-soiree.html
+++ b/www/templates/tab-soiree.html
@@ -1,17 +1,19 @@
 <ion-view view-title="Dashboard" ng-init="init()">
   <ion-content>
-    <div class="button-bar" style="margin: 62px auto 12px auto ; width: 80%; ">
-      <a class="button" ng-click="showme=true">Soirées</a>
+    <div class="button-bar" style="margin: 12px auto 12px auto ; width: 80%; ">
+      <a class="button active" ng-click="showme=true">Soirées</a>
       <a class="button" ng-click="showme=false">Invitations</a>
     </div>
     <ion-list ng-show="showme">
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="soiree in soirees" type="item-text-wrap" href="#/tab/soirees/une_soiree">
+
         <img ng-src="{{soiree.face}}">
-        <span><h2>{{soiree.boite}}</h2> <p style="text-align: right;">{{soiree.date}}</p></span>
-        <p style="color: cyan;">{{soiree.nbr_participants}} participants - 
-        <span ng-if="soiree.statut == 0">En attente</span>
-        <span ng-if="soiree.statut == -1">Refusé</span>
-        <span ng-if="soiree.statut == 1">Accepté</span></p>
+        <p class="title_top_soiree">{{soiree.boite}} {{soiree.date}}</p>
+        <p class="infos_soiree">{{soiree.nbr_participants}} participants - 
+        <span ng-if="soiree.statut == 0" class="stay_soiree">En attente</span>
+        <span ng-if="soiree.statut == -1" class="refuse_soiree">Refusé</span>
+        <span ng-if="soiree.statut == 1" class="accept_soiree">Accepté</span></p>
+
         <ion-option-button class="button-assertive" ng-click="remove(dash)">
           Delete
         </ion-option-button>
@@ -21,8 +23,8 @@
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="invitation in invitations" type="item-text-wrap" href="#/tab/dash/{{invitation.id_invitation}}">
 
         <img ng-src="{{invitation.face}}">
-          <span><h2>{{invitation.boite}}</h2> <p style="text-align: right;">{{invitation.date}}</p></span>
-        <p style="color: cyan;">{{invitation.nbr_participants}} participants - {{invitation.statut}}</p>
+          <p class="title_top_soiree">{{invitation.boite}} {{invitation.date}}</p>
+        <p class="infos_soiree">{{invitation.nbr_participants}} participants - {{invitation.statut}}</p>
 
         <ion-option-button class="button-assertive" ng-click="remove(dash)">
           Delete
