--- a/platforms/android/assets/www/templates/create.html
+++ b/platforms/android/assets/www/templates/create.html
@@ -20,3 +20,20 @@
 		</div>
     </ion-content>
 </ion-view>
+<div class="{{inviteFriends}} contain-fb-friends">
+	<label class="item-input-wrapper">
+	    <i class="icon ion-ios-search placeholder-icon"></i>
+	    <input type="search" placeholder="Search" ng-model="searchFriend">
+	</label>
+	<ion-scroll zooming="true" direction="xy" style="" class="scroll-view">
+	  	<ul>
+			<li class="item item-checkbox" ng-repeat="friendData in friendsData  | filter:searchFriend">
+				 <label class="checkbox">
+				   <input type="checkbox">
+				 </label>
+				 {{friendData.name}}
+			</li>
+		</ul>
+	</ion-scroll>
+	<button class="validate-friends-fb" ng-click="validateFriends()">Valider les invités</button>
+</div>
