--- a/www/templates/tab-soiree.html
+++ b/www/templates/tab-soiree.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Dashboard" ng-init="init()">
   <ion-content>
-    <div class="button-bar" style="margin: 12px auto 12px auto ; width: 80%; ">
+    <div class="button-bar" style=" ">
       <a class="button active" ng-click="showme=true">Soirées</a>
       <a class="button" ng-click="showme=false">Invitations</a>
     </div>
@@ -25,9 +25,9 @@
         <img ng-src="{{invitation.photo}}">
           <p class="title_top_soiree">{{invitation.boite1}} {{invitation.boite2}} {{invitation.boite3}}{{invitation.date}}</p>
         <p class="infos_soiree">{{invitation.nbr_personne_groupe_fille}} participantes - 
-          <span ng-if="invitation.statut_accompagnement == 0">En attente</span>
-        <span ng-if="invitation.statut_accompagnement == -1">Refusé</span>
-        <span ng-if="invitation.statut_accompagnement == 1">Accepté</span></p>
+          <span ng-if="invitation.statut_accompagnement == 0" class="stay_soiree">En attente</span>
+        <span ng-if="invitation.statut_accompagnement == -1" class="refuse_soiree">Refusé</span>
+        <span ng-if="invitation.statut_accompagnement == 1" class="accept_soiree">Accepté</span></p>
 
         <ion-option-button class="button-assertive" ng-click="remove(dash)">
           Delete
