--- a/platforms/android/assets/www/css/ionic.app.css
+++ b/platforms/android/assets/www/css/ionic.app.css
@@ -4197,8 +4197,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
 /* Navigational tab */
 /* Active state for tab */
 .tab-item.tab-item-active, .tab-item.active, .tab-item.activated {
-  opacity: 1;
-  color: #8fcdff !important; }
+  opacity: 1; }
   .tab-item.tab-item-active.tab-item-light, .tab-item.active.tab-item-light, .tab-item.activated.tab-item-light {
     color: #fff; }
   .tab-item.tab-item-active.tab-item-stable, .tab-item.active.tab-item-stable, .tab-item.activated.tab-item-stable {
@@ -7676,6 +7675,9 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+.bar-dark .title {
+  text-align: center; }
+
 .debug-scroll {
   overflow: scroll;
   height: 100%; }
@@ -7845,3 +7847,46 @@ input, textarea, .item-input, .item-input-wrapper {
 
 .loader .ion-loading-c {
   font-size: 64px; }
+
+/******TAB******/
+.tabs-icon-top {
+  color: #8fcdff; }
+
+/***Soiree***/
+.button-bar {
+  border: 1px solid #8fcdff;
+  margin: 12px auto 12px auto;
+  width: 80%; }
+
+.button-bar .button {
+  background-color: #fff;
+  border: none; }
+
+.button-bar .active {
+  background-color: #8fcdff; }
+
+.title_top_soiree {
+  font-size: 14px !important;
+  color: #a3a3a3; }
+
+.infos_soiree {
+  color: #8fcdff;
+  text-transform: uppercase;
+  font-size: 10px; }
+
+.infos_soiree .accept_soiree {
+  color: #4ed765; }
+
+.infos_soiree.stay_soiree {
+  color: gray; }
+
+.infos_soiree.refuse_soiree {
+  color: #f04533; }
+
+/***DetailSoiree***/
+.add_girl {
+  background-color: #8fcdff;
+  width: 80% !important;
+  display: block;
+  margin: 0 auto;
+  border: none; }
