--- a/platforms/android/assets/www/templates/tab-soiree.html
+++ b/platforms/android/assets/www/templates/tab-soiree.html
@@ -1,7 +1,6 @@
 <ion-view view-title="Dashboard" ng-init="init()">
   <ion-content>
-<<<<<<< HEAD
-    <div class="button-bar" style="margin: 12px auto 12px auto ; width: 80%; ">
+    <div class="button-bar" style=" ">
       <a class="button active" ng-click="showme=true">Soirées</a>
       <a class="button" ng-click="showme=false">Invitations</a>
     </div>
@@ -24,12 +23,11 @@
 
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="invitation in invitations" type="item-text-wrap" href="#/tab/dash/{{invitation.id_groupe_fille}}">
         <img ng-src="{{invitation.photo}}">
-          <span><h2>{{invitation.boite1}} {{invitation.boite2}} {{invitation.boite3}}</h2> <p style="text-align: right;">{{invitation.date}}</p></span>
-        <p style="color: cyan;">{{invitation.nbr_personne_groupe_fille}} participantes - 
-          <span ng-if="invitation.statut_accompagnement == 0">En attente</span>
-        <span ng-if="invitation.statut_accompagnement == -1">Refusé</span>
-        <span ng-if="invitation.statut_accompagnement == 1">Accepté</span></p>
-
+          <p class="title_top_soiree">{{invitation.boite1}} {{invitation.boite2}} {{invitation.boite3}}{{invitation.date}}</p>
+        <p class="infos_soiree">{{invitation.nbr_personne_groupe_fille}} participantes - 
+          <span ng-if="invitation.statut_accompagnement == 0" class="stay_soiree">En attente</span>
+        <span ng-if="invitation.statut_accompagnement == -1" class="refuse_soiree">Refusé</span>
+        <span ng-if="invitation.statut_accompagnement == 1" class="accept_soiree">Accepté</span></p>
 
         <ion-option-button class="button-assertive" ng-click="remove(dash)">
           Delete
