--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -1,3 +1,5 @@
+
+
 /* Empty. Add your own CSS if you like */
 /***************************************/
 /*               LOGIN                 */
@@ -49,6 +51,30 @@ h1 span{
 }
 /***************************************/
 
+/***Soiree***/
+.title_top_soiree {
+	font-size: 14px !important;
+	color:#a3a3a3;
+}
+
+.infos_soiree{
+	color: #8fcdff;
+	text-transform: uppercase;
+	font-size: 10px;
+}
+
+.infos_soiree .accept_soiree{
+	color: #4ed765;
+}
+
+.infos_soiree.stay_soiree{
+	color: gray;
+}
+
+.infos_soiree.refuse_soiree{
+	color: #f04533;
+}
+
 /***DetailSoiree***/
 
 .add_girl{
@@ -58,6 +84,7 @@ h1 span{
 	margin: 0 auto;
 	border: none;
 }
+
 .contain-fb-friends{
 	display:none;
 }
@@ -66,6 +93,7 @@ h1 span{
 }
 .contain-fb-friends{
 	position:absolute;
+	background:#fff;
 	z-index:1000;
 	top:65px;bottom:0;left:0;right:0;
 }
