--- a/www/templates/create.html
+++ b/www/templates/create.html
@@ -46,7 +46,7 @@
 	    <i class="icon ion-ios-search placeholder-icon"></i>
 	    <input type="search" placeholder="Search" ng-model="searchFriend">
 	</label>
-	<ion-scroll zooming="true" direction="xy" style="" class="scroll-view">	
+	<ion-scroll zooming="true" direction="y" style="" class="scroll-view">	
 	  	<ul>
 			<li class="item item-checkbox" ng-repeat="friendData in friendsData  | filter:searchFriend">
 				 <label class="checkbox">
