--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -85,12 +85,12 @@ h1 span{
 	border: none;
 }
 
-.contain-fb-friends{
+/*.contain-fb-friends{
 	display:none;
 }
 .cool.contain-fb-friends{
 	display:block;
-}
+}*/
 .contain-fb-friends{
 	position:absolute;
 	background:#fff;
@@ -108,4 +108,11 @@ h1 span{
 	border:none;
 	background:blue;
 	color:#FFF;
+}
+
+.test{
+	position:absolute;
+	z-index:1200;
+	background:red;
+	width:100%;height:100%;
 }
