--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -280,12 +280,115 @@ input, textarea, .item-input, .item-input-wrapper {
   color: #f04533;
 }
 
+
+
+
+/* Empty. Add your own CSS if you like */
+/***************************************/
+/*               LOGIN                 */
+/***************************************/
+.login{
+    background:url(../img/back-login.jpg) no-repeat center;
+    background-size:cover;
+}
+.vertical-center-parent{
+    width:100%;height:100%;
+    font-size:0;
+}
+.vertical-center-parent::before{
+    content:'';
+    width:0;height:100%;
+    display:inline-block;
+    vertical-align:middle;
+}
+.vertical-center{
+    width:99%;
+    display:inline-block;
+    vertical-align:middle;
+}
+h1{
+    margin-bottom:125px;
+    font-family:"Neon-Light";
+    font-size:42.5px;
+    color:#FFF;
+    text-align:center;
+    font-variant:small-caps;
+}
+h1 span{
+    color:#e691ff ;
+}
+.button{
+    border-radius:50px;
+    font-size:15px;
+    margin:0;
+}
+.button i{
+    position:absolute;
+    left:25px;
+    font-size: 22px;
+}
+.color-fb{
+    background-color:#37589a ;
+    border-color:#37589a ;
+    color:#FFF;
+}
+/***************************************/
+
+/***Soiree***/
+.title_top_soiree {
+    font-size: 14px !important;
+    color:#a3a3a3 ;
+}
+
+.infos_soiree{
+    color: #8fcdff ;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+
+.infos_soiree .accept_soiree{
+    color: #4ed765 ;
+}
+
+.infos_soiree.stay_soiree{
+    color: gray;
+}
+
+.infos_soiree.refuse_soiree{
+    color: #f04533 ;
+}
+
 /***DetailSoiree***/
 
 .add_girl{
-  background-color:#8fcdff;
-  width: 80% !important;
-  display: block;
-  margin: 0 auto;
-  border: none;
+    background-color:#8fcdff ;
+    width: 80% !important;
+    display: block;
+    margin: 0 auto;
+    border: none;
+}
+
+.contain-fb-friends{
+    display:none;
+}
+.cool.contain-fb-friends{
+    display:block;
+}
+.contain-fb-friends{
+    position:absolute;
+    background:#fff;
+    z-index:1000;
+    top:65px;bottom:0;left:0;right:0;
+}
+.scroll-view{
+    position:absolute;
+    z-index:1000;
+    top:40px;bottom:60px;left:0;right:0;
+}
+.validate-friends-fb{
+    position:absolute;
+    bottom:0;left:0;right:0;height:60px;
+    border:none;
+    background:blue;
+    color:#FFF;
 }
