--- a/platforms/ios/www/templates/soiree-detail.html
+++ b/platforms/ios/www/templates/soiree-detail.html
@@ -1,15 +1,26 @@
-<ion-view view-title="Soirée du.{{ma_soiree.date}}">
+<ion-view view-title="Soirée du {{datasSoiree.date}}">
  <ion-content name="maSoiree">
- <img ng-src="{{ma_soiree.img_soiree}}">
- 	<h2>{{ma_soiree.boite}}</h2> 
-	<p>{{ma_soiree.date}}</p> 
-	<p>{{ma_soiree.heure}}</p> 
-<i class="ion-ios-people"></i>
-	<p>{{ma_soiree.id_fb}}</p> 
-	<p>{{ma_soiree.id_fb1}}</p>
-	<p>{{ma_soiree.id_fb2}}</p>
-	<p>{{ma_soiree.id_fb3}}</p>
-	<p>{{ma_soiree.id_fb4}}</p> 
+ <img ng-src="{{datasSoiree.photo}}">
+ 	<h2>{{datasSoiree.boite}}</h2> 
+	<p>{{datasSoiree.date}}</p> 
+	<p>{{datasSoiree.heure}}</p> 
+	<i class="ion-ios-people"></i>
+	<div ng-if="datasSoiree.id_fb1 != null">
+		<p>{{datasSoiree.id_fb1}}</p>
+		<img src="{{datasSoiree.url_img1}}">
+	</div>
+	<div ng-if="datasSoiree.id_fb2 != null">
+		<p>{{datasSoiree.id_fb2}}</p>
+		<img src="{{datasSoiree.url_img2}}">
+	</div>
+	<div ng-if="datasSoiree.id_fb3 != null">
+		<p>{{datasSoiree.id_fb3}}</p>
+		<img src="{{datasSoiree.url_img3}}">
+	</div>
+	<div ng-if="datasSoiree.id_fb4 != null">
+		<p>{{datasSoiree.id_fb4}}</p>
+		<img src="{{datasSoiree.url_img4}}">
+	</div>
 <button ng-click="login()" class="button add_girl button-block">Inviter des filles</button>
  </ion-content>
 </ion-view>
