--- a/platforms/ios/www/templates/soiree-detail.html
+++ b/platforms/ios/www/templates/soiree-detail.html
@@ -5,7 +5,8 @@
 	<p>{{datasSoiree.date}}</p> 
 	<p>{{datasSoiree.heure}}</p> 
 	<i class="ion-ios-people"></i>
-	<div ng-if="datasSoiree.id_fb1 != null">
+	<div class="test" ng-if="datasSoiree.id_fb1 != null">
+		<div></div>
 		<p>{{datasSoiree.id_fb1}}</p>
 		<img src="{{datasSoiree.url_img1}}">
 	</div>
