--- a/www/templates/soiree-detail.html
+++ b/www/templates/soiree-detail.html
@@ -5,10 +5,10 @@
 	<p>{{datasSoiree.date}}</p> 
 	<p>{{datasSoiree.heure}}</p> 
 	<i class="ion-ios-people"></i>
-	<div ng-if="datasSoiree.id_fb1 != null">
+	<div class="test" ng-if="datasSoiree.id_fb1 != null">
+		<div></div>
 		<p>{{datasSoiree.id_fb1}}</p>
 		<img src="{{datasSoiree.url_img1}}">
-		{{datasSoiree.url_img1}}
 	</div>
 	<div ng-if="datasSoiree.id_fb2 != null">
 		<p>{{datasSoiree.id_fb2}}</p>
