--- a/platforms/ios/www/templates/soiree-detail.html
+++ b/platforms/ios/www/templates/soiree-detail.html
@@ -8,6 +8,7 @@
 	<div ng-if="datasSoiree.id_fb1 != null">
 		<p>{{datasSoiree.id_fb1}}</p>
 		<img src="{{datasSoiree.url_img1}}">
+		{{datasSoiree.url_img1}}
 	</div>
 	<div ng-if="datasSoiree.id_fb2 != null">
 		<p>{{datasSoiree.id_fb2}}</p>
