--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -24,6 +24,16 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 $garcon-bleu : #8fcdfe;
 $facebook : #36559c;
 body{
+  .ion-ios-plus-outline {
+    text-align: right;
+    width: 100%;
+    font-size: 30px;
+    padding-right: 5px;
+  }
+  .ion-navicon,.ion-ios-arrow-back {
+    padding-left: 5px;
+    font-size: 30px;
+  }
   .single-soiree{
     .container-photo{
       height: 180px;
