--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7675,6 +7675,14 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+body .ion-ios-plus-outline {
+  text-align: right;
+  width: 100%;
+  font-size: 30px;
+  padding-right: 5px; }
+body .ion-navicon, body .ion-ios-arrow-back {
+  padding-left: 5px;
+  font-size: 30px; }
 body .single-soiree .container-photo {
   height: 180px;
   overflow: hidden; }
