--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -85,6 +85,8 @@ body{
         border-radius: 50%;
         margin: 0 auto;
         display: block;
+        width: 40px;
+        height: 40px;
       }
       p {
         padding-top: 20px;
