--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -24,9 +24,19 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 $garcon-bleu : #8fcdfe;
 $facebook : #36559c;
 body{
+  .bar.bar-dark {
+    background-color: #000;
+  }
+  .tabs-background-dark .tabs, .tabs-background-dark > .tabs {
+    background-color: #000;
+  }
+  ion-tabs.tabs-color-active-positive .tab-item{
+    color: white;
+  }
   .ion-ios-plus-outline {
+    position: absolute;
+    right: 5px;
     text-align: right;
-    width: 100%;
     font-size: 30px;
     padding-right: 5px;
   }
