--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7677,6 +7677,14 @@ a.button {
 
 body .bar.bar-dark {
   background-color: #000; }
+  body .bar.bar-dark .title {
+    color: #8fcdfe;
+    font-family: helvetica;
+    font-variant: normal;
+    text-transform: none;
+    font-weight: 400; }
+body ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, body ion-tabs.tabs-color-active-positive .tab-item.active, body ion-tabs.tabs-color-active-positive .tab-item.activated {
+  color: #8fcdfe; }
 body .tabs-background-dark .tabs, body .tabs-background-dark > .tabs {
   background-color: #000; }
 body ion-tabs.tabs-color-active-positive .tab-item {
