--- a/platforms/ios/www/css/ionic.app.css
+++ b/platforms/ios/www/css/ionic.app.css
@@ -7675,8 +7675,18 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+body .menu-left {
+  background-color: black; }
 body .bar.bar-dark {
   background-color: #000; }
+  body .bar.bar-dark .title {
+    color: #8fcdfe;
+    font-family: helvetica;
+    font-variant: normal;
+    text-transform: none;
+    font-weight: 400; }
+body ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, body ion-tabs.tabs-color-active-positive .tab-item.active, body ion-tabs.tabs-color-active-positive .tab-item.activated {
+  color: #8fcdfe; }
 body .tabs-background-dark .tabs, body .tabs-background-dark > .tabs {
   background-color: #000; }
 body ion-tabs.tabs-color-active-positive .tab-item {
@@ -8013,7 +8023,8 @@ h1 span {
 .button {
   border-radius: 50px;
   font-size: 15px;
-  margin: 0; }
+  margin: 0;
+  line-height: 47px; }
 
 .button i {
   position: absolute;
