--- a/platforms/ios/www/css/ionic.app.css
+++ b/platforms/ios/www/css/ionic.app.css
@@ -7675,6 +7675,20 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+body .bar.bar-dark {
+  background-color: #000; }
+  body .bar.bar-dark .title {
+    color: #8fcdfe;
+    font-family: helvetica;
+    font-variant: normal;
+    text-transform: none;
+    font-weight: 400; }
+body ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, body ion-tabs.tabs-color-active-positive .tab-item.active, body ion-tabs.tabs-color-active-positive .tab-item.activated {
+  color: #8fcdfe; }
+body .tabs-background-dark .tabs, body .tabs-background-dark > .tabs {
+  background-color: #000; }
+body ion-tabs.tabs-color-active-positive .tab-item {
+  color: white; }
 body .ion-ios-plus-outline {
   position: absolute;
   right: 5px;
@@ -7966,7 +7980,7 @@ input, textarea, .item-input, .item-input-wrapper {
   color: gray; }
 
 .infos_soiree.refuse_soiree {
-  color: #f04533; }
+  color: #ef473a; }
 
 /* Empty. Add your own CSS if you like */
 /***************************************/
@@ -8037,7 +8051,7 @@ h1 span {
   color: gray; }
 
 .infos_soiree.refuse_soiree {
-  color: #f04533; }
+  color: #ef473a; }
 
 /***DetailSoiree***/
 .add_girl {
