--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -405,7 +405,7 @@ input, textarea, .item-input, .item-input-wrapper {
 }
 
 .infos_soiree.refuse_soiree{
-  color: #f04533;
+  color: #ef473a;
 }
 
 
@@ -483,7 +483,7 @@ h1 span{
 }
 
 .infos_soiree.refuse_soiree{
-    color: #f04533 ;
+    color: #ef473a ;
 }
 
 /***DetailSoiree***/
