--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7980,7 +7980,7 @@ input, textarea, .item-input, .item-input-wrapper {
   color: gray; }
 
 .infos_soiree.refuse_soiree {
-  color: #f04533; }
+  color: #ef473a; }
 
 /* Empty. Add your own CSS if you like */
 /***************************************/
@@ -8051,7 +8051,7 @@ h1 span {
   color: gray; }
 
 .infos_soiree.refuse_soiree {
-  color: #f04533; }
+  color: #ef473a; }
 
 /***DetailSoiree***/
 .add_girl {
