--- a/www/templates/invit.html
+++ b/www/templates/invit.html
@@ -1,5 +1,19 @@
 <ion-view view-title="Inviter">
 	<ion-content>
-		les filles à inviter
+		<ion-list ng-show="showme">
+	      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="groupe in groupes" type="item-text-wrap" href="#/tab/soirees/{{groupe.id_soiree}}">
+
+	        <img ng-src="{{groupe.photo}}">
+	        <p class="title_top_soiree">{{groupe.boite}} {{groupe.date}}</p>
+	        <p class="infos_soiree">{{groupe.nbr_participants}} participants - 
+	        <span ng-if="groupe.statut == 0" class="stay_soiree">En attente</span>
+	        <span ng-if="groupe.statut == -1" class="refuse_soiree">Refusé</span>
+	        <span ng-if="groupe.statut == 1" class="accept_soiree">Accepté</span></p>
+
+	        <ion-option-button class="button-assertive" ng-click="remove(dash)">
+	          Delete
+	        </ion-option-button>
+	      </ion-item>
+	    </ion-list>
 	</ion-content>
 </ion-view>
