--- a/www/templates/invit.html
+++ b/www/templates/invit.html
@@ -5,7 +5,7 @@
 
 	        <img ng-src="{{pictures}}">
 	        <p class="title_top_soiree">{{data.name}} + {{data.nbr_personne_groupe_fille}} amies</p>
-	        <p class="infos_soiree">{{data.boite1}} {{data.boite2}} {{data.boite3}}</p>
+	        <p class="infos_soiree" style="color:#e691ff;">{{data.boite1}} - {{data.boite2}} - {{data.boite3}}</p>
 
 	      </ion-item>
 	    </ion-list>
